# Intruder-Detection-System

./: .gitmodules  LICENSE  README.md  proto_generator.py
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: ConstrainedDeviceApp.language.settings.xml  Sample_I2C.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 1.snap  15.snap  21.snap  22.snap  30.snap  31.snap  32.snap  5.snap  8.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/ConstrainedDeviceApp/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/PeripheralControllerApp/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/Sample_I2C/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/Trial_LWIP/: .location  .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  15.tree  21.tree  22.tree  30.tree  31.tree  32.tree  39.tree  43.tree  5.tree  8.tree  9.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.help.ui/scope_sets/: Default.pref  init_sensor_buffer_obj.hist
.metadata/.plugins/org.eclipse.ltk.ui.refactoring/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
ConstrainedDeviceApp/: .cproject  .mxproject  .project  ConstrainedDeviceApp.ioc
ConstrainedDeviceApp/Core/Inc/: gpio_helper.h  sensor_data.h  spi.h  stm32f7xx_hal_conf.h
ConstrainedDeviceApp/Core/Src/: gpio_helper.c  logger.c  process_data.c  sensor_data.c  spi.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
ConstrainedDeviceApp/Debug/: Trial_LWIP.elf  Trial_LWIP.list  objects.list
ConstrainedDeviceApp/Debug/Core/Src/: freertos.cyclo  freertos.d  gpio_helper.cyclo  gpio_helper.d  logger.su  main.cyclo  process_data.su  sensor_data.cyclo  sensor_data.d  sensor_data.su  spi.cyclo  spi.su  stm32f7xx_hal_msp.d  stm32f7xx_hal_timebase_tim.d  stm32f7xx_it.cyclo  stm32f7xx_it.d  stm32f7xx_it.su  syscalls.d  sysmem.d  system_stm32f7xx.d
ConstrainedDeviceApp/Debug/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.d  stm32f7xx_hal_cortex.d  stm32f7xx_hal_dma_ex.d  stm32f7xx_hal_exti.d  stm32f7xx_hal_flash.d  stm32f7xx_hal_flash_ex.d  stm32f7xx_hal_i2c_ex.d  stm32f7xx_hal_pcd.d  stm32f7xx_hal_pwr.d  stm32f7xx_hal_pwr_ex.d  stm32f7xx_hal_rcc.d  stm32f7xx_hal_tim.d  stm32f7xx_hal_tim_ex.d  stm32f7xx_ll_usb.d
ConstrainedDeviceApp/LWIP/App/: lwip.c
ConstrainedDeviceApp/Release/: Trial_LWIP.list  sources.mk
ConstrainedDeviceApp/Release/Core/Src/: freertos.su  main.su
ConstrainedDeviceApp/Release/Drivers/STM32F7xx_HAL_Driver/Src/: subdir.mk
ConstrainedDeviceApp/Release/LWIP/App/: lwip.cyclo
GatewayDeviceApp/Src/: main.cpp  main.h
GatewayDeviceApp/Src/app/: device_data_manager.cpp  device_data_manager.h  gateway_device_app.cpp  gateway_device_app.h
GatewayDeviceApp/Src/common/log/: CMakeLists.txt  custom_log.cpp  custom_log.h  gda_log.txt
GatewayDeviceApp/Src/data/: base_iot_data.cpp  base_iot_data.h  data_util.cpp  data_util.h  sensor_data.cpp  sensor_data.h
GatewayDeviceApp/Test/: CMakeLists.txt
GatewayDeviceApp/Test/integration/app/: CMakeLists.txt  gatewayDeviceAppTest.cpp  gatewayDeviceAppTest.h
GatewayDeviceApp/Test/unit/common/log/: CMakeLists.txt  loggerTest.cpp  loggerTest.h
GatewayDeviceApp/Test/unit/data/: CMakeLists.txt  baseIotTest.cpp  baseIotTest.h
GatewayDeviceApp/Test/unit/data/sensorData/: CMakeLists.txt  sensorDataTest.cpp  sensorDataTest.h
GatewayDeviceApp/config/: gda_configs.h
PeripheralControllerApp/: .cproject  .mxproject  .project
PeripheralControllerApp/Debug/: Sample_I2C.list  Sample_I2C.map  objects.list
PeripheralControllerApp/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo
Sample_I2C/: .cproject  Sample_I2C Debug.launch  Sample_I2C.ioc
Sample_I2C/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Sample_I2C/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Sample_I2C/Debug/: Sample_I2C.elf  Sample_I2C.list  Sample_I2C.map  makefile
Sample_I2C/Debug/Core/Src/: freertos.d  main.cyclo  main.su  stm32f4xx_it.su  subdir.mk
Sample_I2C/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
Trial_LWIP/: .cproject  .mxproject  .project  Trial_LWIP Debug.launch  Trial_LWIP.ioc
Trial_LWIP/Core/Inc/: logger.h  process_data.h  sensor_data.h  spi.h  stm32f7xx_it.h  sys_cntrl_configs.h
Trial_LWIP/Core/Src/: freertos.c  main.c  process_data.c  sensor_data.c  spi.c
Trial_LWIP/Debug/: Trial_LWIP.elf  Trial_LWIP.list  Trial_LWIP.map  makefile  objects.list  sources.mk
Trial_LWIP/Debug/Core/Src/: freertos.cyclo  freertos.d  freertos.su  gpio_helper.su  logger.cyclo  main.cyclo  main.d  main.su  process_data.cyclo  process_data.d  process_data.su  sensor_data.cyclo  sensor_data.su  spi.cyclo  spi.d  spi.su  stm32f7xx_hal_msp.cyclo  stm32f7xx_hal_msp.su  subdir.mk
Trial_LWIP/Debug/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_dma.d  stm32f7xx_hal_eth.d  stm32f7xx_hal_gpio.d  stm32f7xx_hal_i2c.d  stm32f7xx_hal_pcd_ex.d  stm32f7xx_hal_rcc_ex.d  stm32f7xx_hal_spi.d  stm32f7xx_hal_spi_ex.d  stm32f7xx_hal_uart.d  stm32f7xx_hal_uart_ex.d  subdir.mk
Trial_LWIP/Debug/LWIP/App/: lwip.d  subdir.mk
Trial_LWIP/Release/: Trial_LWIP.elf  Trial_LWIP.map  objects.list
Trial_LWIP/Release/Core/Src/: freertos.cyclo  main.cyclo  main.d  stm32f7xx_hal_msp.su  stm32f7xx_it.su  subdir.mk
Trial_LWIP/Release/LWIP/App/: subdir.mk
proto/: messages.pb.h  messages.proto
(+26 files in other folders)
